workspace-sf/force-app/main/default/objects/AntecipacaoComissao__c/AntecipacaoComissao__c.object-meta.xml
<CustomObject>
    <label>Antecipação de Comissão</label>
    <nameField>
        <displayFormat>AC-{000000}</displayFormat>
        <label>Nome de Antecipação de Comissão</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Antecipação de Comissão</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>