workspace-sf/force-app/main/default/objects/AntecipacaoComissao__c/fields/AntecipacaoAutomatica__c.field-meta.xml
<CustomField>
    <fullName>AntecipacaoAutomatica__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Antecipação automática</label>
    <type>Checkbox</type>
</CustomField>