workspace-sf/force-app/main/default/objects/AntecipacaoComissao__c/fields/FormaPagamento__c.field-meta.xml
<CustomField>
    <fullName>FormaPagamento__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Forma de pagamento</label>
    <referenceTo>FormaPagamento__c</referenceTo>
    <relationshipLabel>Antecipação de Comissão</relationshipLabel>
    <relationshipName>Antecipa_o_de_Comiss_o</relationshipName>
    <type>Lookup</type>
</CustomField>