workspace-sf/force-app/main/default/objects/AntecipacaoComissao__c/fields/LimiteMaximo__c.field-meta.xml
<CustomField>
    <fullName>LimiteMaximo__c</fullName>
    <label>Limite Máximo</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>