workspace-sf/force-app/main/default/objects/AntecipacaoComissao__c/fields/LimiteMinimo__c.field-meta.xml
<CustomField>
    <fullName>LimiteMinimo__c</fullName>
    <label>Limite Mínimo</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>