workspace-sf/force-app/main/default/objects/AntecipacaoComissao__c/fields/RemuneracaoProduto__c.field-meta.xml
<CustomField>
    <fullName>RemuneracaoProduto__c</fullName>
    <label>Remuneração do produto</label>
    <referenceTo>RemuneracaoProduto__c</referenceTo>
    <relationshipLabel>Antecipação de Comissão</relationshipLabel>
    <relationshipName>Antecipacoes_de_Comissao</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>