workspace-sf/force-app/main/default/objects/AntecipacaoComissao__c/validationRules/RV001_LimiteMaximoMenorQueMinimo.validationRule-meta.xml
<ValidationRule>
    <fullName>RV001_LimiteMaximoMenorQueMinimo</fullName>
    <active>true</active>
    <errorConditionFormula>LimiteMaximo__c &lt;  LimiteMinimo__c</errorConditionFormula>
    <errorDisplayField>LimiteMaximo__c</errorDisplayField>
    <errorMessage>Limite máximo não pode ser menor que o limite mínimo</errorMessage>
</ValidationRule>