workspace-sf/force-app/main/default/objects/AntecipacaoComissao__c/validationRules/RV002_ValidaLimiteMinimo.validationRule-meta.xml
<ValidationRule>
    <fullName>RV002_ValidaLimiteMinimo</fullName>
    <active>true</active>
    <errorConditionFormula>OR(LimiteMinimo__c &lt; 0.0,
 LimiteMinimo__c &gt; 1.0)</errorConditionFormula>
    <errorDisplayField>LimiteMinimo__c</errorDisplayField>
    <errorMessage>Limite minimo precisa estar entre 0 e 100</errorMessage>
</ValidationRule>