workspace-sf/force-app/main/default/objects/AntecipacaoComissao__c/validationRules/RV003_ValidaLimiteMaximo.validationRule-meta.xml
<ValidationRule>
    <fullName>RV003_ValidaLimiteMaximo</fullName>
    <active>true</active>
    <errorConditionFormula>OR( LimiteMaximo__c &lt; 0.0,
 LimiteMaximo__c &gt; 1.0)</errorConditionFormula>
    <errorDisplayField>LimiteMaximo__c</errorDisplayField>
    <errorMessage>Limite máximo precisa estar entre 0 e 100</errorMessage>
</ValidationRule>